crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_renders_since_as_dedicated_section.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

_1 symbols · 1 interfaces_

## Interfaces

- [Example](./interfaces/Example.md) - Example API.

===== combinators/interfaces/Example.md =====
# Interface: Example

Example API.

## Since

v0.27.0

## Signature

```ts
export function Example(): void
```
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 interfaces_

## Modules

- [combinators](./combinators/index.md)
