crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_resolves_links_in_lifecycle_alert_body.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/integer.md =====
# Function: integer()

I.

## Signature

```ts
export function integer(): void
```
===== combinators/functions/string.md =====
# Function: string()

> [!CAUTION]
> Use [integer](./integer.md) instead.

S.

## Signature

```ts
export function string(): void
```
===== combinators/index.md =====
# combinators

_2 symbols · 2 functions · 1 deprecated_

## Functions

- [integer](./functions/integer.md) - I.
- [string](./functions/string.md) - S.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 2 functions · 1 deprecated_

## Modules

- [combinators](./combinators/index.md)
