crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_single_public_overload_renders_inline.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/define.md =====
# Function: define()

Define a command.

## Signature

```ts
export function define<G>(definition: CommandDefinition<G>): CommandDefinitionResult<G>
```
===== default/index.md =====
# default

_2 symbols · 2 functions_

## Functions

- [define](./functions/define.md) - Define a command.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 2 functions_

## Modules

- [default](./default/index.md)
