crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_sort_required_first_then_alphabetical_orders_members.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/index.md =====
# default

_1 symbols · 1 interfaces · 3 members_

## Interfaces

- [Opts](./interfaces/Opts.md) - Options.

===== default/interfaces/Opts.md =====
# Interface: Opts

Options.

## Signature

```ts
export function Opts(): void
```

## Properties

| Name | Type | Description |
| --- | --- | --- |
| `a` | `unknown` |  |
| `z` | `unknown` |  |
| `b` _(optional)_ | `unknown` |  |
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 interfaces · 3 members_

## Modules

- [default](./default/index.md)
