crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_sort_source_order_orders_entries_by_line.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/alpha.md =====
# Function: alpha()

A.

## Signature

```ts
export function alpha(): void
```
===== default/functions/zebra.md =====
# Function: zebra()

Z.

## Signature

```ts
export function zebra(): void
```
===== default/index.md =====
# default

_2 symbols · 2 functions_

## Functions

- [zebra](./functions/zebra.md) - Z.
- [alpha](./functions/alpha.md) - A.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 2 functions_

## Modules

- [default](./default/index.md)
