crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_sorts_class_members_within_each_group.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/classes/Engine.md =====
# Class: Engine

Engine.

## Signature

```ts
export function Engine(): void
```

## Methods

### build()

***

### run()

## Properties

- `alpha` `property` `unknown`
- `zeta` `property` `unknown`
===== combinators/index.md =====
# combinators

_1 symbols · 1 classes · 4 members_

## Classes

- [Engine](./classes/Engine.md) - Engine.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 classes · 4 members_

## Modules

- [combinators](./combinators/index.md)
