crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_type_alias_renders_concrete_function_metadata.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/boolean.md =====
# Function: boolean()

## Signature

```ts
export function boolean(): void
```
===== combinators/functions/number.md =====
# Function: number()

## Signature

```ts
export function number(): void
```
===== combinators/functions/string.md =====
# Function: string()

## Signature

```ts
export function string(): void
```
===== combinators/index.md =====
# combinators

_15 symbols · 3 functions · 1 interfaces · 11 types · 1 parameters · 1 returns_

## Functions

- [boolean](./functions/boolean.md)
- [number](./functions/number.md)
- [string](./functions/string.md)

## Interfaces

- [CommandContext](./interfaces/CommandContext.md) - Command context.

## Type Aliases

- [ArgExplicitlyProvided](./type-aliases/ArgExplicitlyProvided.md)
- [ArgValues](./type-aliases/ArgValues.md)
- [CommandContextCore](./type-aliases/CommandContextCore.md)
- [CommandRunner](./type-aliases/CommandRunner.md) - Run a command.
- [DefaultGunshiParams](./type-aliases/DefaultGunshiParams.md)
- [GunshiParamsConstraint](./type-aliases/GunshiParamsConstraint.md)
- [PluginExtension](./type-aliases/PluginExtension.md)
- [RenderingOptions](./type-aliases/RenderingOptions.md)
- [SubCommandable](./type-aliases/SubCommandable.md)
- [U](./type-aliases/U.md)

===== combinators/interfaces/CommandContext.md =====
# Interface: CommandContext

Command context.

## Signature

```ts
export interface CommandContext<G = DefaultGunshiParams> {}
```
===== combinators/type-aliases/ArgExplicitlyProvided.md =====
# Type Alias: ArgExplicitlyProvided

===== combinators/type-aliases/ArgValues.md =====
# Type Alias: ArgValues

===== combinators/type-aliases/CommandContextCore.md =====
# Type Alias: CommandContextCore

===== combinators/type-aliases/CommandRunner.md =====
# Type Alias: CommandRunner

## Call Signature

```ts
export type CommandRunner<G> = (ctx: Readonly<CommandContext<G>>) => Awaitable<string | void>
```

Run a command.

### Parameters

- `ctx` (`Readonly`\<[`CommandContext`](../interfaces/CommandContext.md)\<`G`\>\>)

### Returns

`Awaitable<string | void>` — CLI output.

## Call Signature
===== combinators/type-aliases/DefaultGunshiParams.md =====
# Type Alias: DefaultGunshiParams

===== combinators/type-aliases/GunshiParamsConstraint.md =====
# Type Alias: GunshiParamsConstraint

===== combinators/type-aliases/PluginExtension.md =====
# Type Alias: PluginExtension

===== combinators/type-aliases/RenderingOptions.md =====
# Type Alias: RenderingOptions

===== combinators/type-aliases/SubCommandable.md =====
# Type Alias: SubCommandable

===== combinators/type-aliases/U.md =====
# Type Alias: U

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 15 symbols · 3 functions · 1 interfaces · 11 types · 1 parameters · 1 returns_

## Modules

- [combinators](./combinators/index.md)
