crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_type_alias_without_returns_tag_renders_return_section.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/boolean.md =====
# Function: boolean()

## Signature

```ts
export function boolean(): void
```
===== combinators/functions/number.md =====
# Function: number()

## Signature

```ts
export function number(): void
```
===== combinators/functions/string.md =====
# Function: string()

## Signature

```ts
export function string(): void
```
===== combinators/index.md =====
# combinators

_15 symbols · 3 functions · 2 interfaces · 10 types · 2 parameters · 1 returns_

## Functions

- [boolean](./functions/boolean.md)
- [number](./functions/number.md)
- [string](./functions/string.md)

## Interfaces

- [Command](./interfaces/Command.md)
- [CommandContext](./interfaces/CommandContext.md)

## Type Aliases

- [ArgExplicitlyProvided](./type-aliases/ArgExplicitlyProvided.md)
- [ArgValues](./type-aliases/ArgValues.md)
- [CommandRunner](./type-aliases/CommandRunner.md)
- [DefaultGunshiParams](./type-aliases/DefaultGunshiParams.md)
- [GunshiParamsConstraint](./type-aliases/GunshiParamsConstraint.md)
- [OnPluginExtension](./type-aliases/OnPluginExtension.md) - Plugin extension hook.
- [PluginExtension](./type-aliases/PluginExtension.md)
- [RenderingOptions](./type-aliases/RenderingOptions.md)
- [SubCommandable](./type-aliases/SubCommandable.md)
- [U](./type-aliases/U.md)

===== combinators/interfaces/Command.md =====
# Interface: Command

## Signature

```ts
export interface Command<G> {}
```
===== combinators/interfaces/CommandContext.md =====
# Interface: CommandContext

## Signature

```ts
export interface CommandContext<G> {}
```
===== combinators/type-aliases/ArgExplicitlyProvided.md =====
# Type Alias: ArgExplicitlyProvided

===== combinators/type-aliases/ArgValues.md =====
# Type Alias: ArgValues

===== combinators/type-aliases/CommandRunner.md =====
# Type Alias: CommandRunner

===== combinators/type-aliases/DefaultGunshiParams.md =====
# Type Alias: DefaultGunshiParams

===== combinators/type-aliases/GunshiParamsConstraint.md =====
# Type Alias: GunshiParamsConstraint

===== combinators/type-aliases/OnPluginExtension.md =====
# Type Alias: OnPluginExtension

Plugin extension hook.

## Signature

```ts
export type OnPluginExtension<G> = (ctx: Readonly<CommandContext<G>>, cmd: Readonly<Command<G>>) => Awaitable<void>
```

## Parameters

- `ctx` (`Readonly`\<[`CommandContext`](../interfaces/CommandContext.md)\<`G`\>\>) - The command context.
- `cmd` (`Readonly`\<[`Command`](../interfaces/Command.md)\<`G`\>\>) - The command.

## Returns

`Awaitable<void>`
===== combinators/type-aliases/PluginExtension.md =====
# Type Alias: PluginExtension

===== combinators/type-aliases/RenderingOptions.md =====
# Type Alias: RenderingOptions

===== combinators/type-aliases/SubCommandable.md =====
# Type Alias: SubCommandable

===== combinators/type-aliases/U.md =====
# Type Alias: U

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 15 symbols · 3 functions · 2 interfaces · 10 types · 2 parameters · 1 returns_

## Modules

- [combinators](./combinators/index.md)
